<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sharemessage">This marvelous colorized image was generated by a project from CPSC 475, Android mobile programming.
        Please contact Prof. Keith Perkins at keith.perkins@cnu.edu if you have any questions about our department or the classes we offer or technology in general.</string>
    <string name="shareTitle">Welcome to CNU from the PCSE department!</string>
    <string name="ok">OK</string>
    <string name="startup_access_required">Camera, Read, and Write permissions are required to use this app.</string>

    <string name="camera_unavailable"><b>Camera could not be opened.</b>
        \nThis occurs when the camera is not available (for example it is already in use) or if the system has denied access (for example when camera access has been disabled).</string>
    <string name="camera_permission_not_available">Permission is not available. Requesting camera permission.</string>
    <string name="camera_permission_granted">Camera permission was granted. Starting preview.</string>
    <string name="camera_permission_denied">Camera permission request was denied.</string>

    <string name="write_unavailable"><b>Error asking permission for write.</b></string>
    <string name="write_permission_not_available">Permission is not available. Requesting write permission.</string>
    <string name="write_permission_granted">Write permission was granted.</string>
    <string name="write_permission_denied">Write permission request was denied.</string>

    <string name="read_unavailable"><b>Error asking permission for read.</b></string>
    <string name="read_permission_not_available">Permission is not available. Requesting read permission.</string>
    <string name="read_permission_granted">Read permission was granted.</string>
    <string name="read_permission_denied">Read permission request was denied.</string>

    <string name="share_options">Share Options</string>
    <string name="share_subject">Share Subject</string>
    <string name="share_text">Share Text</string>
    <string name="rendering_options">Rendering Options</string>
    <string name="rendering_info">Level of sketchiness and color saturation</string>
    <string name="sketchiness">Sketchiness</string>
    <string name="sketchiness_info">Set BW threshold, higher numbers correspond to less detail and whiter image</string>
    <string name="saturation">Saturation</string>
    <string name="saturation_info">Set color saturation, higher numbers correspond to more colorful images</string>

<!--    Keys-->
    <string name="share_subject_key">share_subject</string>
    <string name="share_text_key">share_text</string>
    <string name="sketchiness_seekbar_key">sketchiness_seekbar</string>
    <string name="saturation_seekbar_key">saturation_seekbar</string>
</resources>